<resources>
    <string name="app_name">VaxNote</string>
    <string name="vaxNote">VaxNote</string>
    <string name="SignInActivity">Sign In</string>
    <string name="MainActivity">Main Menu</string>
    <string name="SignUpActivity">Sign Up</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account? Click here</string>
    <string name="appicon">AppIcon</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="appicon1">appicon</string>
    <string name="already_have_an_account_tap_here">Already have an account? Tap here</string>
    <string name="vaxnote">VaxNote</string>
    <string name="mainicon">mainicon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_details_of_the_entire_family">Add Details of the Entire Family</string>
    <string name="textview">TextView</string>
    <string name="next">Next</string>
    <string name="family">family</string>
    <string name="first_page_info">Enter the entire Family‘s Vaccine  information under one app</string>
    <string name="user">User</string>
    <string name="dob_dd_mm_yyyy">DOB : DD/MM/YYYY</string>
    <string name="future_vaccine_schedule">Future Vaccine Schedule</string>
    <string name="age_group_19_60">Age Group : 19 - 60</string>
    <string name="emailaddress_gmail_com">emailaddress@gmail.com</string>
    <string name="_2_abc_apartment_def_road_andheri_mumbai">2, ABC Apartment, DEF Road, Andheri, Mumbai</string>
    <string name="past_vaccine_record">Past Vaccine Record</string>
    <string name="next_dosage">Next Dosage:</string>
    <string name="record">+Record</string>
    <string name="person_1_vaccine_a_n_date_dd_mm_yy">Person 1- Vaccine A \n Date: DD/MM/YY</string>
    <string name="edit">edit</string>
    <string name="user_photo">user_photo</string>
    <string name="menu">Menu</string>
    <string name="three_dot">three_dot</string>
    <string name="settings">Settings</string>
    <string name="edit_personal_info">Edit Personal Info</string>
    <string name="notifications_reminders"><![CDATA[Notifications & Reminders]]></string>
    <string name="logout">Logout</string>
    <string name="dob">DOB</string>
    <string name="address">Address</string>
    <string name="Continue">continue</string>
    <string name="reminders_notifications"><![CDATA[Reminders & Notifications]]></string>
    <string name="get_notified_before_every_vaccine_due_date">Get notified before every vaccine due date</string>
    <string name="third">third</string>
    <string name="Notifications">Notifications</string>
    <string name="AboutUsStringResource">This is an android application that is will save your vaccine information and will also give you reminders for your next dose!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>