<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAEACE"
    tools:context=".activities.MainActivity">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right|center_horizontal|end"
        app:headerLayout="@layout/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/future_vaccine_schedule"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.0" />



        <ImageButton
            android:id="@+id/left_tap"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/buttonround"
            android:contentDescription="@string/menu"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar3"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_menu_24"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/user_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="175dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/dob_dd_mm_yyyy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="175dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/age_group_19_60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/_2_abc_apartment_def_road_andheri_mumbai"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/emailaddress_gmail_com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="104dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/record"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="330dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/whitebutton"
            android:padding="10dp"
            android:text="@string/next_dosage"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="44dp"
            android:layout_height="33dp"
            android:layout_marginTop="24dp"
            android:background="#FAEACE"
            android:contentDescription="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.757"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/person_1_vaccine_a_n_date_dd_mm_yy"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.714" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/past_vaccine_record"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>

