<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserProfileFragment">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--        <ImageButton-->
            <!--            android:id="@+id/left_tap"-->
            <!--            android:layout_width="0dp"-->
            <!--            android:layout_height="55dp"-->
            <!--            android:layout_marginEnd="24dp"-->
            <!--            android:layout_weight="1"-->
            <!--            android:background="@drawable/buttonround"-->
            <!--            android:contentDescription="@string/menu"-->
            <!--            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintTop_toTopOf="@+id/toolbar3"-->
            <!--            app:layout_constraintVertical_bias="0.0"-->
            <!--            app:srcCompat="@drawable/ic_baseline_menu_24"-->
            <!--            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />-->

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/full_name"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.096"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/userDOB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/dob_dd_mm_yyyy"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/userName"
                app:layout_constraintTop_toBottomOf="@+id/userName"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/userAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/_2_abc_apartment_def_road_andheri_mumbai"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="@+id/userDOB"
                app:layout_constraintTop_toBottomOf="@+id/userDOB"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/emailaddress_gmail_com"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.206"
                app:layout_constraintStart_toStartOf="@+id/userAddress"
                app:layout_constraintTop_toBottomOf="@+id/userAddress"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/nextDosage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:padding="10dp"
                android:text="@string/next_dosage"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userEmail" />

            <LinearLayout
                android:id="@+id/notificationUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/whitebutton"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nextDosage" />

            <Button
                android:id="@+id/vaccineRecordPast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/past_vaccine_record"
                android:textColor="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notificationUser" />

            <Button
                android:id="@+id/futureSchedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/future_vaccine_schedule"
                android:textColor="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vaccineRecordPast"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>