<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewUserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newUserToolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="506dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/vaxNote" />

    <EditText
        android:id="@+id/nameofPerson"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/whitebutton"
        android:backgroundTint="@color/purple_200"
        android:ems="10"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/hintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserToolbar"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/dobUser"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/whitebutton"
        android:backgroundTint="@color/purple_200"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="Date of Birth"
        android:importantForAutofill="no"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="#000000"
        android:textColorHint="@color/hintColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/nameofPerson"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameofPerson"
        app:layout_constraintTop_toBottomOf="@+id/nameofPerson" />

    <EditText
        android:id="@+id/addressUser"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/whitebutton"
        android:backgroundTint="@color/purple_200"
        android:ems="10"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="@+id/dobUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dobUser"
        app:layout_constraintTop_toBottomOf="@+id/dobUser" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FBA812"
        android:backgroundTintMode="add"
        android:text="@string/Continue"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressUser"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>